# stockwell

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.txt  ChangeLog.txt  MANIFEST.in  README.md  get_fftw3.sh  make_dist.sh  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: build_wheels.yml  github-deploy.yml  release.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  refs.bib  requirements.txt  stockwell.lib_path.rst  stockwell.sine.rst  stockwell.st.rst  theory.rst
docs/_static/: custom.css
scripts/: check_style.sh  get_fftw3.sh  make_dist.sh  make_wheel.bat  make_wheel.sh  make_wheel_macos.sh  setup_local_hooks.sh  test_stockwell.bat  wheel_repair.py
stockwell/: __init__.py  _version.py  lib_path.py  sine.py  st.py  stockwell.py
stockwell/c_libs/: sine.c  sinemodule.c  st.c  st_types.h  stmodule.c
stockwell/tests/: test_stockwell.py
tests/: conftest.py  test_stockwell.py
