[build-system]
requires = [
  'wheel',
  'setuptools',
  'numpy>=1.18'
]

[tool.cibuildwheel]
build = ['cp38-*', 'cp39-*', 'cp310-*', 'cp311-*', 'cp312-*']
skip = '*-win32'
test-requires = 'pytest'
test-command = 'pytest --pyargs stockwell'

[tool.cibuildwheel.linux]
before-all = 'yum install -y fftw-devel'

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add fftw-dev"

[tool.cibuildwheel.macos]
before-build = './get_fftw3.sh'

[tool.cibuildwheel.windows]
before-all = '%CONDA%\Scripts\conda.exe install fftw'
before-build = 'pip install delvewheel'
repair-wheel-command = 'delvewheel repair --add-path %CONDA%\Library\bin -w {dest_dir} {wheel}'
test-requires = ''
test-command = 'python -m stockwell.tests.test_stockwell'
