[build-system]
requires = [
  'wheel',
  'setuptools>=77',
  'numpy>=1.18',
  'versioneer[toml]'
]

[project]
name = 'stockwell'
dynamic = ['version', 'readme']
authors = [
    { name = 'Claudio Satriano', email = 'satriano@ipgp.fr' },
]
description = 'Time-frequency analysis through Stockwell transform'
license = 'GPL-3.0-or-later'
license-files = ['LICENSE.txt']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Physics',
]
requires-python = '>=3.9'
dependencies = [
  'numpy>=1.18',
]

[project.urls]
Homepage = 'https://github.com/claudiodsf/stockwell'
Source = 'https://github.com/claudiodsf/stockwell'

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'stockwell/_version.py'
versionfile_build = 'stockwell/_version.py'
tag_prefix = 'v'
parentdir_prefix = 'stockwell-'

[tool.setuptools.dynamic]
version = {attr = 'stockwell.__version__'}

[tool.cibuildwheel]
build = ['cp39-*', 'cp310-*', 'cp311-*', 'cp312-*', 'cp313-*', 'cp314-*']
skip = '*-win32'
test-requires = 'pytest'
test-command = 'pytest --pyargs stockwell'

[tool.cibuildwheel.linux]
before-build = './scripts/get_fftw3.sh'
repair-wheel-command = 'LD_LIBRARY_PATH=/project/external/fftw3/lib auditwheel repair -w {dest_dir} {wheel}'

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add fftw-dev"

[tool.cibuildwheel.macos]
before-build = './scripts/get_fftw3.sh'

[tool.cibuildwheel.windows]
before-all = '%CONDA%\Scripts\conda.exe install fftw'
before-build = 'pip install delvewheel'
repair-wheel-command = 'delvewheel repair --add-path %CONDA%\Library\bin -w {dest_dir} {wheel}'
test-requires = 'pytest'
test-command = '{package}\scripts\test_stockwell.bat'
